Implement public donation page with Przelewy24 integration
Add complete donation flow with payment processing:
- Przelewy24 payment gateway integration with transaction creation
- Webhook handling for payment status updates
- aPaczka shipping API integration for gift fulfillment
- Inventory stock alerts when donation packages are low
- Gift section with parcel locker selection
- Payment success and error pages
- Development environment configuration for webhook testing

Services added:
- Przelewy24::Client for payment API interactions
- InventoryServices::StockAlertService for low stock notifications

The donation page allows users to purchase EDK packages and optionally
receive a gift package delivered via InPost parcel lockers.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@ tailadmin-free-tailwind-dashboard-template-main/
 
 # Test files
 test_import_*.csv
+
+# Kubernetes secrets (never commit actual secrets!)
+_deploy/admin-packages-secrets.yaml
