--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ docker-web:
   script:
     - ls
     - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD" docker.investimetric.io
-    - docker build -t docker.investimetric.io/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME:$CI_PIPELINE_ID .
+    - docker build --no-cache -t docker.investimetric.io/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME:$CI_PIPELINE_ID .
     - docker push docker.investimetric.io/$CI_PROJECT_ROOT_NAMESPACE/$CI_PROJECT_NAME:$CI_PIPELINE_ID
 
 .deploy:
