Fix email domain and welcome email styling
- Change APP_URL from pakiety.edk.org.pl to wspieram.edk.org.pl in Kubernetes config
- Update email template URL fallbacks to use wspieram.edk.org.pl domain
- Improve welcome email styling with blue colors and narrower 600px layout

--- a/_deploy/admin-packages-config.yaml
+++ b/_deploy/admin-packages-config.yaml
@@ -9,7 +9,7 @@ data:
   RAILS_SERVE_STATIC_FILES: "true"
   
   # Application URLs
-  APP_URL: "https://pakiety.edk.org.pl"
+  APP_URL: "https://wspieram.edk.org.pl"
   PUBLIC_DONATION_URL: "https://wspieram.edk.org.pl"
   
   # Przelewy24 Configuration (non-sensitive)
