Fix password reset email sender configuration
Problem: Password reset functionality was failing on production with SMTP error:
SendAsDenied; pakiety@edk.org.pl not allowed to send as please-change-me-at-config-initializers-devise@example.com

Root cause: Devise was using default placeholder email address instead of the
actual SMTP authenticated email address.

Changes:
- Updated config.mailer_sender in devise.rb to use MAILER_SENDER env variable
  with pakiety@edk.org.pl as default
- Added MAILER_SENDER to Kubernetes ConfigMap to explicitly configure the sender
  email address in production

Microsoft Exchange/Outlook SMTP requires the "From" address to match the
authenticated SMTP username, so now both use pakiety@edk.org.pl.

--- a/_deploy/admin-packages-config.yaml
+++ b/_deploy/admin-packages-config.yaml
@@ -30,4 +30,5 @@ data:
   SMTP_USER_NAME: "pakiety@edk.org.pl"
   SMTP_AUTHENTICATION: "login"
   SMTP_ENABLE_STARTTLS_AUTO: "true"
+  MAILER_SENDER: "pakiety@edk.org.pl"
   LEADER_EMAIL_FROM: "pakiety@edk.org.pl"
