--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -13,3 +13,13 @@ production:
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
+
+  sync_apaczka_statuses:
+    class: Apaczka::SyncStatusJob
+    queue: low
+    schedule: every 15 minutes
+
+  abandon_expired_donations:
+    class: AbandonExpiredDonationsJob
+    queue: low
+    schedule: every hour at minute 30
