--- a/_deploy/admin-packages-secrets.yaml.example
+++ b/_deploy/admin-packages-secrets.yaml.example
@@ -31,6 +31,9 @@ data:
   # aPaczka
   APACZKA_APP_SECRET: "your_base64_encoded_apaczka_secret"
 
+  # Synerise CRM
+  SYNERISE_API_KEY: "your_base64_encoded_synerise_api_key"
+
   # SMTP
   SMTP_USER_NAME: "your_base64_encoded_smtp_username"
   SMTP_PASSWORD: "your_base64_encoded_smtp_password"
